@@ -5,6 +5,7 @@ import com.example.backend_tallerautomotriz.dto.request.ReprogramarCitaRequestDT
 import com.example.backend_tallerautomotriz.dto.response.CitaResponseDTO;
 import com.example.backend_tallerautomotriz.entity.*;
 import com.example.backend_tallerautomotriz.enums.EstadoCita;
+import com.example.backend_tallerautomotriz.enums.EstadoServicio;
 import com.example.backend_tallerautomotriz.exception.BusinessRuleException;
 import com.example.backend_tallerautomotriz.exception.EntityNotFoundException;
 import com.example.backend_tallerautomotriz.repository.*;
@@ -14,16 +15,17 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
 public class CitaServiceImpl implements CitaService {
 
-    private final CitaRepository repo;
+    private final CitaRepository citaRepo;
     private final ClienteRepository clienteRepo;
     private final SucursalRepository sucursalRepo;
     private final MecanicoRepository mecanicoRepo;
@@ -35,164 +37,293 @@ public class CitaServiceImpl implements CitaService {
 
     @Override
     @Transactional
-    public CitaResponseDTO crear(CitaRequestDTO req) {
-        validarHorarioLaboral(req.getHora());
-
-        Cliente c = clienteRepo.findById(req.getClienteId())
+    public CitaResponseDTO crear(CitaRequestDTO request) {
+        validarTurno(request.getFecha(), request.getHora());
+        Cliente cliente = clienteRepo.findById(request.getClienteId())
                 .orElseThrow(() -> new EntityNotFoundException("Cliente no encontrado"));
-        Sucursal s = sucursalRepo.findById(req.getSucursalId())
+        Sucursal sucursal = sucursalRepo.findById(request.getSucursalId())
                 .orElseThrow(() -> new EntityNotFoundException("Sucursal no encontrada"));
+        Mecanico mecanico = null;
 
-        Mecanico m = null;
-        if (req.getMecanicoId() != null) {
-            m = mecanicoRepo.findById(req.getMecanicoId())
-                    .orElseThrow(() -> new EntityNotFoundException("Mecánico no encontrado"));
-            validarDisponibilidadMecanico(m.getId(), req.getFecha(), req.getHora(), null);
+        if (request.getMecanicoId() != null) {
+            mecanico = mecanicoRepo.findByIdForUpdate(request.getMecanicoId())
+                    .orElseThrow(() -> new EntityNotFoundException("Mecanico no encontrado"));
+            validarMecanicoEnSucursal(mecanico, sucursal);
+            validarDisponibilidad(mecanico.getId(), request.getFecha(), request.getHora(), null);
         }
 
-
-        List<Servicio> servicios = new ArrayList<>();
-        if (req.getServicioIds() != null) {
-            for (Integer sid : req.getServicioIds()) {
-                servicios.add(servicioRepo.findById(sid)
-                        .orElseThrow(() -> new EntityNotFoundException("Servicio no encontrado: " + sid)));
-            }
-        }
-
-        Cita cita = new Cita(null, c, s, m, req.getFecha(), req.getHora(),
-                EstadoCita.PROGRAMADA, servicios, null, null);
-        return toDTO(repo.save(cita));
+        Cita cita = new Cita();
+        cita.setCliente(cliente);
+        cita.setSucursal(sucursal);
+        cita.setMecanico(mecanico);
+        cita.setFecha(request.getFecha());
+        cita.setHora(request.getHora());
+        cita.setEstado(EstadoCita.PROGRAMADA);
+        cita.setServicios(buscarServicios(request.getServicioIds()));
+        return toDTO(citaRepo.save(cita));
     }
 
     @Override
-    public CitaResponseDTO obtenerPorId(Integer id) { return toDTO(buscar(id)); }
+    @Transactional(readOnly = true)
+    public CitaResponseDTO obtenerPorId(Integer id) {
+        return toDTO(buscar(id));
+    }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CitaResponseDTO> listarPorCliente(Integer clienteId) {
-        return repo.findByClienteId(clienteId).stream().map(this::toDTO).collect(Collectors.toList());
+        validarClienteExiste(clienteId);
+        return citaRepo.findByClienteIdOrderByFechaDescHoraDesc(clienteId).stream().map(this::toDTO).toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CitaResponseDTO> listarPorMecanico(Integer mecanicoId) {
-        return repo.findByMecanicoId(mecanicoId).stream().map(this::toDTO).collect(Collectors.toList());
+        validarMecanicoExiste(mecanicoId);
+        return citaRepo.findByMecanicoIdOrderByFechaDescHoraDesc(mecanicoId).stream().map(this::toDTO).toList();
     }
 
     @Override
-    public List<CitaResponseDTO> listarPorSucursalYFecha(Integer sucursalId, String fecha) {
-        return repo.findBySucursalIdAndFecha(sucursalId, LocalDate.parse(fecha))
-                .stream().map(this::toDTO).collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<CitaResponseDTO> listarPorSucursalYFecha(Integer sucursalId, LocalDate fecha) {
+        if (!sucursalRepo.existsById(sucursalId)) {
+            throw new EntityNotFoundException("Sucursal no encontrada: " + sucursalId);
+        }
+        return citaRepo.findBySucursalIdAndFechaOrderByHoraAsc(sucursalId, fecha).stream().map(this::toDTO).toList();
     }
 
     @Override
-    public List<CitaResponseDTO> listarPendientes() {
-        return repo.findByMecanicoIsNullAndEstado(EstadoCita.PROGRAMADA)
-                .stream().map(this::toDTO).collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<CitaResponseDTO> listarPendientes(Integer sucursalId) {
+        if (sucursalId != null) {
+            if (!sucursalRepo.existsById(sucursalId)) {
+                throw new EntityNotFoundException("Sucursal no encontrada: " + sucursalId);
+            }
+            return citaRepo.findBySucursalIdAndMecanicoIsNullAndEstadoOrderByFechaAscHoraAsc(
+                            sucursalId,
+                            EstadoCita.PROGRAMADA)
+                    .stream()
+                    .map(this::toDTO)
+                    .toList();
+        }
+        return citaRepo.findByMecanicoIsNullAndEstadoOrderByFechaAscHoraAsc(EstadoCita.PROGRAMADA)
+                .stream()
+                .map(this::toDTO)
+                .toList();
     }
 
     @Override
     @Transactional
     public CitaResponseDTO aceptar(Integer citaId, Integer mecanicoId) {
-        Cita cita = buscar(citaId);
-        if (cita.getEstado() != EstadoCita.PROGRAMADA)
-            throw new BusinessRuleException("Solo se pueden aceptar citas en estado PROGRAMADA");
+        Cita cita = buscarParaActualizar(citaId);
+        if (cita.getEstado() != EstadoCita.PROGRAMADA || cita.getMecanico() != null) {
+            throw new BusinessRuleException("Solo se pueden aceptar citas programadas sin mecanico asignado");
+        }
 
-        Mecanico mecanico = mecanicoRepo.findById(mecanicoId)
-                .orElseThrow(() -> new EntityNotFoundException("Mecánico no encontrado"));
-        validarDisponibilidadMecanico(mecanicoId, cita.getFecha(), cita.getHora(), citaId);
+        Mecanico mecanico = mecanicoRepo.findByIdForUpdate(mecanicoId)
+                .orElseThrow(() -> new EntityNotFoundException("Mecanico no encontrado: " + mecanicoId));
+        validarMecanicoEnSucursal(mecanico, cita.getSucursal());
+        validarTurno(cita.getFecha(), cita.getHora());
+        validarDisponibilidad(mecanicoId, cita.getFecha(), cita.getHora(), citaId);
 
         cita.setMecanico(mecanico);
         cita.setEstado(EstadoCita.CONFIRMADA);
-        repo.save(cita);
-
-        // Notificar al cliente
-        notificacionService.crear(
+        Cita guardada = citaRepo.save(cita);
+        notificar(
                 cita.getCliente().getUsuario().getId(),
-                "Tu cita del " + cita.getFecha() + " a las " + cita.getHora() +
-                        " fue aceptada por el mecánico " +
-                        mecanico.getUsuario().getNombre() + " " + mecanico.getUsuario().getApellido() + ".",
+                "Tu cita #" + citaId + " fue aceptada por " + nombreMecanico(mecanico),
                 "CITA_CONFIRMADA",
-                citaId
-        );
-
-        return toDTO(cita);
+                citaId);
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
-    public CitaResponseDTO reprogramar(Integer citaId, ReprogramarCitaRequestDTO req) {
-        validarHorarioLaboral(req.getNuevaHora());
-        Cita cita = buscar(citaId);
+    public CitaResponseDTO reprogramar(Integer citaId, ReprogramarCitaRequestDTO request) {
+        validarTurno(request.getNuevaFecha(), request.getNuevaHora());
+        Cita cita = buscarParaActualizar(citaId);
+        if (cita.getMecanico() == null) {
+            throw new BusinessRuleException("La cita no tiene mecanico asignado");
+        }
+        if (cita.getEstado() != EstadoCita.CONFIRMADA && cita.getEstado() != EstadoCita.PROGRAMADA) {
+            throw new BusinessRuleException("No se puede reprogramar una cita en estado " + cita.getEstado());
+        }
 
-        if (cita.getMecanico() == null)
-            throw new BusinessRuleException("La cita no tiene mecánico asignado para reprogramar");
-        if (cita.getEstado() == EstadoCita.CANCELADA || cita.getEstado() == EstadoCita.COMPLETADA)
-            throw new BusinessRuleException("No se puede reprogramar una cita " + cita.getEstado());
-
-        validarDisponibilidadMecanico(cita.getMecanico().getId(), req.getNuevaFecha(), req.getNuevaHora(), citaId);
-
-        cita.setNuevaFechaPropuesta(req.getNuevaFecha());
-        cita.setNuevaHoraPropuesta(req.getNuevaHora());
+        mecanicoRepo.findByIdForUpdate(cita.getMecanico().getId())
+                .orElseThrow(() -> new EntityNotFoundException("Mecanico no encontrado"));
+        validarDisponibilidad(cita.getMecanico().getId(), request.getNuevaFecha(), request.getNuevaHora(), citaId);
+        cita.setNuevaFechaPropuesta(request.getNuevaFecha());
+        cita.setNuevaHoraPropuesta(request.getNuevaHora());
         cita.setEstado(EstadoCita.REPROGRAMADA);
-        repo.save(cita);
-
-        // Notificar al cliente
-        notificacionService.crear(
+        Cita guardada = citaRepo.save(cita);
+        notificar(
                 cita.getCliente().getUsuario().getId(),
-                "Tu mecánico propuso reprogramar tu cita para el " + req.getNuevaFecha() +
-                        " a las " + req.getNuevaHora() + ". Por favor, confirma o cancela.",
+                "Se propuso reprogramar tu cita #" + citaId + " para " + request.getNuevaFecha()
+                        + " a las " + request.getNuevaHora(),
                 "CITA_REPROGRAMADA",
-                citaId
-        );
-
-        return toDTO(cita);
+                citaId);
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public CitaResponseDTO aceptarReprogramacion(Integer citaId) {
-        Cita cita = buscar(citaId);
-        if (cita.getEstado() != EstadoCita.REPROGRAMADA)
-            throw new BusinessRuleException("La cita no está en estado REPROGRAMADA");
+        Cita cita = buscarParaActualizar(citaId);
+        if (cita.getEstado() != EstadoCita.REPROGRAMADA
+                || cita.getNuevaFechaPropuesta() == null
+                || cita.getNuevaHoraPropuesta() == null) {
+            throw new BusinessRuleException("La cita no tiene una reprogramacion pendiente");
+        }
+
+        validarTurno(cita.getNuevaFechaPropuesta(), cita.getNuevaHoraPropuesta());
+        if (cita.getMecanico() != null) {
+            mecanicoRepo.findByIdForUpdate(cita.getMecanico().getId())
+                    .orElseThrow(() -> new EntityNotFoundException("Mecanico no encontrado"));
+            validarDisponibilidad(
+                    cita.getMecanico().getId(),
+                    cita.getNuevaFechaPropuesta(),
+                    cita.getNuevaHoraPropuesta(),
+                    citaId);
+        }
 
         cita.setFecha(cita.getNuevaFechaPropuesta());
         cita.setHora(cita.getNuevaHoraPropuesta());
         cita.setNuevaFechaPropuesta(null);
         cita.setNuevaHoraPropuesta(null);
         cita.setEstado(EstadoCita.CONFIRMADA);
-        repo.save(cita);
-
-        // Notificar al mecánico
+        Cita guardada = citaRepo.save(cita);
         if (cita.getMecanico() != null) {
-            notificacionService.crear(
+            notificar(
                     cita.getMecanico().getUsuario().getId(),
-                    "El cliente aceptó la reprogramación de la cita #" + citaId + " para el " + cita.getFecha() + ".",
+                    "El cliente acepto la reprogramacion de la cita #" + citaId,
                     "REPROGRAMACION_ACEPTADA",
-                    citaId
-            );
+                    citaId);
         }
-
-        return toDTO(cita);
+        return toDTO(guardada);
     }
 
     @Override
     @Transactional
     public CitaResponseDTO confirmar(Integer id) {
-        Cita c = buscar(id);
-        c.setEstado(EstadoCita.CONFIRMADA);
-        return toDTO(repo.save(c));
+        Cita cita = buscarParaActualizar(id);
+        if (cita.getEstado() == EstadoCita.CONFIRMADA) {
+            return toDTO(cita);
+        }
+        if (cita.getEstado() != EstadoCita.PROGRAMADA || cita.getMecanico() == null) {
+            throw new BusinessRuleException("Solo se pueden confirmar citas programadas con mecanico asignado");
+        }
+        validarTurno(cita.getFecha(), cita.getHora());
+        cita.setEstado(EstadoCita.CONFIRMADA);
+        return toDTO(citaRepo.save(cita));
     }
 
     @Override
     @Transactional
     public void cancelar(Integer id) {
-        Cita c = buscar(id);
-        if (c.getEstado() == EstadoCita.COMPLETADA)
-            throw new BusinessRuleException("No se puede cancelar una cita ya completada");
-        c.setEstado(EstadoCita.CANCELADA);
-        repo.save(c);
+        Cita cita = buscarParaActualizar(id);
+        if (cita.getEstado() == EstadoCita.CANCELADA) {
+            return;
+        }
+        if (cita.getEstado() == EstadoCita.COMPLETADA) {
+            throw new BusinessRuleException("No se puede cancelar una cita completada");
+        }
+        cita.setEstado(EstadoCita.CANCELADA);
+        cita.setNuevaFechaPropuesta(null);
+        cita.setNuevaHoraPropuesta(null);
+        citaRepo.save(cita);
     }
 
-    // ── helpers ──────────────────────────────────────────────────────────────
+    private List<Servicio> buscarServicios(List<Integer> servicioIds) {
+        if (servicioIds == null || servicioIds.isEmpty()) {
+            return new java.util.ArrayList<>();
+        }
+        Set<Integer> unicos = new HashSet<>(servicioIds);
+        if (unicos.size() != servicioIds.size()) {
+            throw new BusinessRuleException("No se permiten servicios duplicados en una cita");
+        }
+        return new java.util.ArrayList<>(unicos.stream().map(id -> {
+            Servicio servicio = servicioRepo.findById(id)
+                    .orElseThrow(() -> new EntityNotFoundException("Servicio no encontrado: " + id));
+            if (servicio.getEstado() != EstadoServicio.ACTIVO) {
+                throw new BusinessRuleException("El servicio no esta activo: " + id);
+            }
+            return servicio;
+        }).toList());
+    }
+
+    private void validarTurno(LocalDate fecha, LocalTime hora) {
+        if (hora.getMinute() != 0 || hora.getSecond() != 0 || hora.getNano() != 0) {
+            throw new BusinessRuleException("Las citas deben iniciar en una hora exacta");
+        }
+        if (hora.isBefore(HORA_INICIO) || !hora.isBefore(HORA_FIN)) {
+            throw new BusinessRuleException("La hora debe estar entre las 09:00 y las 19:00");
+        }
+        if (!LocalDateTime.of(fecha, hora).isAfter(LocalDateTime.now())) {
+            throw new BusinessRuleException("La cita debe programarse en una fecha y hora futura");
+        }
+    }
+
+    private void validarMecanicoEnSucursal(Mecanico mecanico, Sucursal sucursal) {
+        if (!mecanico.getSucursal().getId().equals(sucursal.getId())) {
+            throw new BusinessRuleException("El mecanico no pertenece a la sucursal seleccionada");
+        }
+    }
+
+    private void validarDisponibilidad(Integer mecanicoId, LocalDate fecha, LocalTime hora, Integer citaIdExcluir) {
+        boolean ocupado = citaIdExcluir == null
+                ? citaRepo.existsByMecanicoIdAndFechaAndHoraAndEstadoNot(mecanicoId, fecha, hora, EstadoCita.CANCELADA)
+                : citaRepo.existsByMecanicoIdAndFechaAndHoraAndIdNotAndEstadoNot(
+                mecanicoId, fecha, hora, citaIdExcluir, EstadoCita.CANCELADA);
+        if (ocupado) {
+            throw new BusinessRuleException("El mecanico ya tiene una cita a esa hora");
+        }
+    }
+
+    private void validarClienteExiste(Integer clienteId) {
+        if (!clienteRepo.existsById(clienteId)) {
+            throw new EntityNotFoundException("Cliente no encontrado: " + clienteId);
+        }
+    }
+
+    private void validarMecanicoExiste(Integer mecanicoId) {
+        if (!mecanicoRepo.existsById(mecanicoId)) {
+            throw new EntityNotFoundException("Mecanico no encontrado: " + mecanicoId);
+        }
+    }
+
+    private Cita buscar(Integer id) {
+        return citaRepo.findById(id).orElseThrow(() -> new EntityNotFoundException("Cita no encontrada: " + id));
+    }
+
+    private Cita buscarParaActualizar(Integer id) {
+        return citaRepo.findByIdForUpdate(id)
+                .orElseThrow(() -> new EntityNotFoundException("Cita no encontrada: " + id));
+    }
+
+    private String nombreMecanico(Mecanico mecanico) {
+        return mecanico.getUsuario().getNombre() + " " + mecanico.getUsuario().getApellido();
+    }
+
+    private void notificar(Integer usuarioId, String mensaje, String tipo, Integer referenciaId) {
+        notificacionService.crear(usuarioId, mensaje, tipo, referenciaId);
+    }
+
+    private CitaResponseDTO toDTO(Cita cita) {
+        return new CitaResponseDTO(
+                cita.getId(),
+                cita.getCliente().getUsuario().getNombre() + " " + cita.getCliente().getUsuario().getApellido(),
+                cita.getCliente().getId(),
+                cita.getSucursal().getNombre(),
+                cita.getSucursal().getId(),
+                cita.getMecanico() == null ? null : nombreMecanico(cita.getMecanico()),
+                cita.getMecanico() == null ? null : cita.getMecanico().getId(),
+                cita.getFecha(),
+                cita.getHora(),
+                cita.getEstado().name(),
+                cita.getServicios().stream().map(Servicio::getNombre).toList(),
+                cita.getNuevaFechaPropuesta(),
+                cita.getNuevaHoraPropuesta());
+    }
 
     private void validarHorarioLaboral(LocalTime hora) {
         if (hora.isBefore(HORA_INICIO) || hora.isAfter(HORA_FIN.minusMinutes(1)))
@@ -203,37 +334,9 @@ public class CitaServiceImpl implements CitaService {
 
     private void validarDisponibilidadMecanico(Integer mecanicoId, LocalDate fecha, LocalTime hora, Integer citaIdExcluir) {
         boolean ocupado = citaIdExcluir != null
-                ? repo.existsByMecanicoIdAndFechaAndHoraAndIdNot(mecanicoId, fecha, hora, citaIdExcluir)
-                : repo.existsByMecanicoIdAndFechaAndHora(mecanicoId, fecha, hora);
+                ? citaRepo.existsByMecanicoIdAndFechaAndHoraAndIdNot(mecanicoId, fecha, hora, citaIdExcluir)
+                : citaRepo.existsByMecanicoIdAndFechaAndHora(mecanicoId, fecha, hora);
         if (ocupado)
             throw new BusinessRuleException("El mecánico ya tiene una cita a esa hora y fecha");
-    }
-
-    private Cita buscar(Integer id) {
-        return repo.findById(id).orElseThrow(() -> new EntityNotFoundException("Cita no encontrada: " + id));
-    }
-
-    private CitaResponseDTO toDTO(Cita c) {
-        String mecNombre = c.getMecanico() != null
-                ? c.getMecanico().getUsuario().getNombre() + " " + c.getMecanico().getUsuario().getApellido()
-                : null;
-        Integer mecId = c.getMecanico() != null ? c.getMecanico().getId() : null;
-
-        List<String> nombresServicios = c.getServicios().stream()
-                .map(Servicio::getNombre).collect(Collectors.toList());
-
-        return new CitaResponseDTO(
-                c.getId(),
-                c.getCliente().getUsuario().getNombre() + " " + c.getCliente().getUsuario().getApellido(),
-                c.getCliente().getId(),
-                c.getSucursal().getNombre(),
-                c.getSucursal().getId(),
-                mecNombre, mecId,
-                c.getFecha(), c.getHora(),
-                c.getEstado().name(),
-                nombresServicios,
-                c.getNuevaFechaPropuesta(),
-                c.getNuevaHoraPropuesta()
-        );
     }
 }
